股票对比界面

--- a/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
@@ -116,25 +116,33 @@
                     <div class="col-sm-4" style="padding-left:0;padding-right: 10px">
                         <div class="headLabel">选择对比股票</div>
                         <!--添加对比股票-->
-                        <div style="background-color: white;padding: 15px">
+                        <div style="background-color: white;padding: 15px;margin-bottom: 10px">
                             <div class="centerAlignment">
                                 <label>添加对比：</label>
                                 <input type="text" id="searchTextField" placeholder="请输入股票名称或代码">
                             </div>
-                            <div id="stockContainer">
-                                <div class="stockCard">
-                                    <span class="stockCardName">上海九百</span>
-                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
-                                </div>
-                                <div class="stockCard">
-                                    <span class="stockCardName">包钢股份</span>
-                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
-                                </div>
-                                <div class="stockCard">
-                                    <span class="stockCardName">工商银行</span>
-                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
-                                </div>
-                            </div>
+                            <ul id="stockContainer">
+                                <!--<li class="stockCard">-->
+                                    <!--<span class="stockCardName">上海九百</span>-->
+                                    <!--<button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>-->
+                                <!--</li>-->
+                                <!--<li class="stockCard">-->
+                                    <!--<span class="stockCardName">包钢股份</span>-->
+                                    <!--<button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>-->
+                                <!--</li>-->
+                                <!--<li class="stockCard">-->
+                                    <!--<span class="stockCardName">工商银行</span>-->
+                                    <!--<button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>-->
+                                <!--</li>-->
+                                <!--<li class="stockCard">-->
+                                    <!--<span class="stockCardName">奥翔药业</span>-->
+                                    <!--<button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>-->
+                                <!--</li>-->
+                                <!--<li class="stockCard">-->
+                                    <!--<span class="stockCardName">中兴商业</span>-->
+                                    <!--<button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>-->
+                                <!--</li>-->
+                            </ul>
 
                             <div class="centerAlignment" style="margin: 10px 0">
                                 <p class="yellow_word">提示：最多对比五只股票</p>
@@ -142,6 +150,145 @@
                             <div style="padding-left:8%; ">
                                 <button id="deleteAllButton">清空</button>
                                 <button id="compareButton">开始对比</button>
+                            </div>
+                        </div>
+                        <div style="background-color: white;padding: 15px">
+                            <div>
+                                <button class="hotStockButton hotStockBottomBorder" id="hotCompareStockButton">热门股票</button>
+                                <button class="hotStockButton" id="browseCompareStockButton">最近访问</button>
+                            </div>
+                            <div id="hotCompareStock">
+                                <table class="table">
+                                    <tbody>
+                                    <tr>
+                                        <td><a>华联超综</a></td>
+                                        <td class="redFont">6.55</td>
+                                        <td class="redFont">10.08%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>上海九百</a></td>
+                                        <td class="redFont">12.60</td>
+                                        <td class="redFont">10.04%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>青海华鼎</a></td>
+                                        <td class="redFont">9.66</td>
+                                        <td class="redFont">10.02%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>晶瑞股份</a></td>
+                                        <td class="greenFont">14.60</td>
+                                        <td class="greenFont">10.02%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>展鹏科技</a></td>
+                                        <td class="greenFont">26.04</td>
+                                        <td class="greenFont">10.01%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>杭州解百</a></td>
+                                        <td class="redFont">9.34</td>
+                                        <td class="redFont">10.01%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>顶点软件</a></td>
+                                        <td class="greenFont">44.18</td>
+                                        <td class="greenFont">10.01%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>正海生物</a></td>
+                                        <td class="greenFont">39.81</td>
+                                        <td class="greenFont">10.00%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>中兴商业</a></td>
+                                        <td class="redFont">11.90</td>
+                                        <td class="redFont">5.40%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>徐家汇</a></td>
+                                        <td class="redFont">13.06</td>
+                                        <td class="redFont">5.15%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="displayNone" id="hotBrowseStock">
+                                <table class="table">
+                                    <tbody>
+                                    <tr>
+                                        <td><a>杭州园林</a></td>
+                                        <td class="redFont">61.60</td>
+                                        <td class="redFont">10.00%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>奥翔药业</a></td>
+                                        <td class="redFont">26.18</td>
+                                        <td class="redFont">10.00%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>超频三</a></td>
+                                        <td class="redFont">35.18</td>
+                                        <td class="redFont">1.85%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>展鹏科技</a></td>
+                                        <td class="greenFont">24.81</td>
+                                        <td class="greenFont">4.72%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>寿仙谷</a></td>
+                                        <td class="greenFont">42.56</td>
+                                        <td class="greenFont">5.55%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>金石资源</a></td>
+                                        <td class="redFont">22.20</td>
+                                        <td class="redFont">2.33%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>万通智控</a></td>
+                                        <td class="greenFont">18.01</td>
+                                        <td class="greenFont">9.99%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>伟隆股份</a></td>
+                                        <td class="greenFont">46.66</td>
+                                        <td class="greenFont">4.39%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>森特股份</a></td>
+                                        <td class="redFont">27.15</td>
+                                        <td class="redFont">4.06%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a>金溢科技</a></td>
+                                        <td class="redFont">52.76</td>
+                                        <td class="redFont">1.66%</td>
+                                        <td><button class="addCompareStockButton"><i class="fa fa-plus" aria-hidden="true"></i>对比</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -203,5 +350,7 @@
         <div id="remind" class="green_word">提示消息</div>
     </div>
 </div>
+
+<script src="../js/stockCompare.js"></script>
 </body>
 </html>
