--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="deal-record-holder">
                         <h2>交易明细</h2>
-                        <table>
+                        <table class="table-hover table-responsive">
                             <thead>
                             <tr>
                                 <th>股票名称</th>
@@ -224,7 +224,7 @@
                 </div>
                 <!--标签页下面的功能区部分-->
                 <div class="function-content zixuangu-part disappear" id="zixuangu-part">
-                   <table>
+                   <table class="table-hover table-responsive">
                        <thead>
                        <tr>
                            <th style="width: 30px;">序号</th>
@@ -411,19 +411,29 @@
                    </table>
                 </div>
                 <div class="function-content makestrategy-part disappear" id="makestrategy-part">
-                    <table>
+                    <table class="table-hover table-responsive">
                         <thead>
                         <tr>
                             <th style="width: 60px;">序号</th>
-                            <th>策略名称</th>
+                            <th style="width: 60px;">策略名称</th>
                             <th style="width: 100px;">开始时间</th>
                             <th style="width: 100px;">结束时间</th>
                             <th style="width: 90px;">股票池</th>
-                            <th>策略基准</th>
+                            <th style="width: 90px;">策略基准</th>
                             <th style="width: 70px;">调仓周期(天)</th>
-                            <th>最大持股数(支)</th>
+                            <th style="width: 90px;">最大持股数(支)</th>
                             <th style="width: 60px;">选股指标</th>
                             <th style="width: 60px;">删除策略</th>
+                            <!--<th>序号</th>-->
+                            <!--<th>策略名称</th>-->
+                            <!--<th>开始时间</th>-->
+                            <!--<th>结束时间</th>-->
+                            <!--<th>股票池</th>-->
+                            <!--<th>策略基准</th>-->
+                            <!--<th>调仓周期(天)</th>-->
+                            <!--<th>最大持股数(支)</th>-->
+                            <!--<th>选股指标</th>-->
+                            <!--<th>删除策略</th>-->
                         </tr>
                         </thead>
                         <tbody>
@@ -453,7 +463,7 @@
                     </table>
                 </div>
                 <div class="function-content usestrategy-part disappear" id="usestrategy-part">
-                    <table>
+                    <table class="table-hover table-responsive">
                         <thead>
                         <tr>
                             <th style="width: 60px;">序号</th>
@@ -487,7 +497,7 @@
                     </table>
                 </div>
                 <div class="function-content history-part disappear" id="history-part">
-                    <table>
+                    <table class="table-hover table-responsive">
                         <thead>
                         <tr>
                             <th>序号</th>
