--- a/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
@@ -293,7 +293,17 @@
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="headLabel">走势对比</div>
+                        <div class="headLabel">走势对比<span style="font-size: 15px;font-weight: 500">  (请在左侧添加对比股票)</span></div>
+                        <div class="whiteBackground" style="padding: 15px;margin-bottom: 10px">
+                            <div style="margin-bottom: 5px">
+                                <ul>
+                                    <li style="display: inline-block"><button class="chartChooseButton hotStockBottomBorder">分时图</button></li>
+                                    <li style="display: inline-block"><button class="chartChooseButton">涨跌幅</button></li>
+                                    <li style="display: inline-block"><button class="chartChooseButton">收盘价</button></li>
+                                </ul>
+                            </div>
+                            <div id="compareChartContainer" style="height: 480px"></div>
+                        </div>
                     </div>
                 </div>
 
@@ -351,6 +361,7 @@
     </div>
 </div>
 
+<script src="../charts/lineChart.js"></script>
 <script src="../js/stockCompare.js"></script>
 </body>
 </html>
