--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -11,8 +11,8 @@
     <link href="../css/myCSS/nav_footerCSS.css" rel="stylesheet">
     <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/myCSS/UserCenterCSS2.css" rel="stylesheet">
-    <script src="../js/bootstrap.min.js" ></script>
     <script src="../js/jquery-3.2.1.js"></script>
+    <script src="../js/bootstrap.min.js" ></script>
     <script src="../js/jquery.webui-popover.js"></script>
     <script src="../js/header.js"></script>
     <script type="text/javascript" src="../js/myJS/UserCenterJS.js"></script>
@@ -50,7 +50,7 @@
                     <ul class="nav nav-tabs">
                         <li class="active" id="tab0"><a href="#" style="cursor: pointer">个人账户</a></li>
                         <li  id="tab1"><a href="#">自选股</a></li>
-                        <li id="tab2"><a href="#">创建策略记录</a></li>
+                        <!--<li id="tab2"><a href="#">创建策略记录</a></li>-->
                         <li id="tab3"><a href="#">使用策略记录</a></li>
                         <li id="tab4"><a href="#">浏览个股历史</a></li>
                         <button id="clear-button">清空</button>
@@ -93,130 +93,116 @@
                         </div>
                     </div>
                     <div class="deal-record-holder">
-                        <h2>交易明细</h2>
+                        <h2 class="secondTabActive" id="second-tab1"><a>持仓记录</a></h2>
+                        <h2 class="secondTabDeActive" id="second-tab2"><a>成交记录</a></h2>
                         <table class="table-hover table-responsive">
                             <thead>
                             <tr>
                                 <th>股票名称</th>
-                                <th>买入时间</th>
-                                <th>卖出时间</th>
-                                <th>买入数量</th>
-                                <th>总盈亏</th>
-                                <th>今日盈亏</th>
+                                <th>最新价</th>
+                                <th>成本</th>
+                                <th>持仓数量</th>
+                                <th>浮动盈亏</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
                                 <td>阿里巴巴</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>百度</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>腾讯</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>谷歌</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>苹果</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>亚马逊</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>Facebook</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>IBM</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>三星</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>小米</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>华为</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>华为</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>华为</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             <tr>
                                 <td>华为</td>
-                                <td>2017/05/25</td>
-                                <td>----/--/--</td>
+                                <td>44.96</td>
+                                <td>45.92</td>
                                 <td>1000</td>
-                                <td>10%</td>
-                                <td>1.2%</td>
+                                <td>-960</td>
                             </tr>
                             </tbody>
                         </table>
@@ -227,13 +213,13 @@
                    <table class="table-hover table-responsive">
                        <thead>
                        <tr>
-                           <th style="width: 30px;">序号</th>
-                           <th style="width: 70px;">股票ID</th>
-                           <th style="width: 70px;">股票名称</th>
-                           <th style="width: 60px;">现价</th>
-                           <th style="width: 70px;">涨跌幅</th>
-                           <th style="width: 70px;">成交量</th>
-                           <th style="width: 70px;">删除自选</th>
+                           <th>序号</th>
+                           <th>股票ID</th>
+                           <th>股票名称</th>
+                           <th>现价</th>
+                           <th>涨跌幅</th>
+                           <th>成交量</th>
+                           <th>删除自选</th>
                        </tr>
                        </thead>
                        <tbody>
@@ -410,71 +396,19 @@
                        </tbody>
                    </table>
                 </div>
-                <div class="function-content makestrategy-part disappear" id="makestrategy-part">
-                    <table class="table-hover table-responsive">
-                        <thead>
-                        <tr>
-                            <th style="width: 60px;">序号</th>
-                            <th style="width: 60px;">策略名称</th>
-                            <th style="width: 100px;">开始时间</th>
-                            <th style="width: 100px;">结束时间</th>
-                            <th style="width: 90px;">股票池</th>
-                            <th style="width: 90px;">策略基准</th>
-                            <th style="width: 70px;">调仓周期(天)</th>
-                            <th style="width: 90px;">最大持股数(支)</th>
-                            <th style="width: 60px;">选股指标</th>
-                            <th style="width: 60px;">删除策略</th>
-                            <!--<th>序号</th>-->
-                            <!--<th>策略名称</th>-->
-                            <!--<th>开始时间</th>-->
-                            <!--<th>结束时间</th>-->
-                            <!--<th>股票池</th>-->
-                            <!--<th>策略基准</th>-->
-                            <!--<th>调仓周期(天)</th>-->
-                            <!--<th>最大持股数(支)</th>-->
-                            <!--<th>选股指标</th>-->
-                            <!--<th>删除策略</th>-->
-                        </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>
-                                    <a>最挣钱的策略</a>
-                                </td>
-                                <td>2017-5-23</td>
-                                <td>2017-5-23</td>
-                                <td>全部股票</td>
-                                <td>沪深300</td>
-                                <td>5</td>
-                                <td>10</td>
-                                <td>
-                                    <a href="javascript:void(0);" title="展开">
-                                        <img src="../images/open.png">
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="javascript:void(0);" title="deleteButton">
-                                        <img src="../images/delete.png">
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
                 <div class="function-content usestrategy-part disappear" id="usestrategy-part">
                     <table class="table-hover table-responsive">
                         <thead>
                         <tr>
-                            <th style="width: 60px;">序号</th>
+                            <th>序号</th>
                             <th>策略名称</th>
-                            <th style="width: 100px;">开始时间</th>
-                            <th style="width: 100px;">结束时间</th>
-                            <th style="width: 90px;">股票池</th>
+                            <th>开始时间</th>
+                            <th>结束时间</th>
+                            <th>股票池</th>
                             <th>策略基准</th>
-                            <th style="width: 70px;">调仓周期(天)</th>
+                            <th>调仓周期(天)</th>
                             <th>最大持股数(支)</th>
-                            <th style="width: 60px;">删除策略</th>
+                            <th>删除策略</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -517,6 +451,10 @@
                         </tr>
                         </tbody>
                     </table>
+                    <div>
+                        <div class="head"></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
         </div>
