--- a/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
@@ -144,16 +144,17 @@
                             <!--股票当前价格 增幅-->
                             <div class="infoPrice col-sm-3">
                                 <div style="text-align: center">
-                                    <div style="margin-top: 30px;margin-bottom: 20px">
+                                    <div style="margin-top: 30px;margin-bottom: 5px">
                                         <span id="stockPrice">25.38</span>
-                                        <img src="../images/rise.png">
+                                        <img src="../images/rise.svg" style="margin-top: -15px">
                                     </div>
-                                    <div>
+                                    <div style="margin-bottom: 15px">
                                         <span class="addPrice">+2.31</span>
                                         <span class="addPrice">(</span>
                                         <span class="addPrice">10.01</span>
                                         <span class="addPrice">%)</span>
                                     </div>
+                                    <div><button id="buyButton"><img src="../images/buy.svg">买入</button></div>
                                 </div>
                             </div>
                             <!--股票数据 开盘价 收盘价等-->
